@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>171</version>
+  <version>180</version>
   <dependencies>
       <dependency>profile-Products.ATContentTypes:base</dependency>
 <!--
